# 2026_1_OOAD

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: analysis.yml  build.yml  release-calver.yml
2026_1_OOAD/: .clang-tidy  2026_1_OOAD.cpp  2026_1_OOAD.h  CMakeLists.txt  main.cpp
2026_1_OOAD/Class/: CleanerController.cpp  CleanerController.h  EventBus.cpp  EventBus.h  IPower.cpp  IPower.h  ISensor.h  Motor.cpp  Motor.h  MotorController.cpp  MotorController.h  PowerController.cpp  SensorController.cpp  SensorController.h  SensorProvider.cpp  SensorProvider.h  Tick.cpp  Tick.h  Timer.cpp  Timer.h
2026_1_OOAD/HDWARE/: DigitalClock.cpp  DigitalClock.h  DustSensor.cpp  DustSensor.h  FrontSensor.cpp  FrontSensor.h  HwCleaner.h  LeftSensor.cpp  LeftSensor.h  Motor.cpp  Motor.h  RightSensor.cpp  RightSensor.h
2026_1_OOAD/Simulator/: GridMap.cpp  GridMap.h  RvcSimulator.cpp  RvcSimulator.h  SimulatedCleaner.cpp  SimulatedCleaner.h  SimulatedMotor.cpp  SimulatedMotor.h  SimulatedSensor.cpp  SimulatedSensor.h  SystemTestCases.cpp  SystemTestMode.cpp
Class/: CleanerController.cpp  CleanerController.h  EventBus.cpp  EventBus.h  IPower.cpp  IPower.h  MotorController.cpp  MotorController.h  PowerController.cpp  PowerController.h  SensorController.cpp  SensorController.h  SensorProvider.cpp  SensorProvider.h  Tick.cpp  Tick.h  Timer.cpp  Timer.h
tests/: CMakeLists.txt  test_cleaner_controller.cpp  test_integration.cpp  test_main.cpp  test_motor_controller.cpp  test_rvc_simulator.cpp  test_sensor_controller.cpp  test_tick.cpp  test_timer.cpp
